# IR2134

buildings/: classroom.building.yaml  classroom.world
buildings/classroom_world/classroom_L1/: model.sdf
buildings/classroom_world/classroom_L1/meshes/: model.material
buildings/classroom_world/classroom_L2/: model.sdf
buildings/classroom_world/classroom_L2/meshes/: model.material
buildings/nav_graphs/: 0.yaml  1.yaml
rmf_ws/: .rmf_schedule_node.yaml
rmf_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
rmf_ws/install/first_project/share/first_project/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
rmf_ws/install/large_project/share/large_project/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
rmf_ws/install/project_assets/share/project_assets/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
rmf_ws/install/project_config/share/project_config/: classroom.launch.xml  common.launch.xml  estce.launch.xml  local_setup.bash  (+8 more)
rmf_ws/install/rmf_visualization_schedule/include/: json.hpp
rmf_ws/log/: latest_build
rmf_ws/src/classroom_simulation/: CMakeLists.txt  package.xml
rmf_ws/src/first_project/: CMakeLists.txt  README.md
rmf_ws/src/first_project/config/: tinyRobot_config.yaml
rmf_ws/src/first_project/launch/: icc_kyoto.launch.xml  simulation.launch.xml
rmf_ws/src/large_project/: CMakeLists.txt  package.xml
rmf_ws/src/large_project/config/: cleanerBotA_config.yaml  tinyRobot_config.yaml
rmf_ws/src/large_project/launch/: estce.launch.xml  simulation.launch.xml
rmf_ws/src/large_project/maps/estce/: estce.building.yaml
rmf_ws/src/large_project/maps/estce/models/CleaningSection/: model.config
rmf_ws/src/large_project/maps/estce/models/FoodCourtBenchLong/meshes/: FoodCourtBenchLong.mtl
rmf_ws/src/large_project/maps/estce/models/InformationCounter/: model.sdf
rmf_ws/src/large_project/maps/estce/models/MiRCart/: model.sdf
rmf_ws/src/project/: README.md
rmf_ws/src/project/project_config/: CMakeLists.txt
rmf_ws/src/project/project_fleet_adapter/: setup.py
rmf_ws/src/project/project_maps/: CMakeLists.txt  package.xml  test1.building.yaml
rmf_ws/src/project/project_simulation/: CMakeLists.txt
rmf_ws/src/project/project_tasks/: CHANGELOG.rst  setup.py
rmf_ws/src/project_config/: CMakeLists.txt  package.xml
rmf_ws/src/project_maps/: package.xml
rmf_ws/src/project_simulation/: package.xml
(+998 files in other folders)
